[package]
name = "vaudio"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
cpal = "0.15"
rustfft = "6.2"
clap = { version = "=4.4.18", features = ["derive"] }
anyhow = "1.0"
rand = "0.8"
unicode-width = "0.1"
coreaudio-sys = "=0.2.16"
unicode-segmentation = "=1.12.0"
